kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jivs-platform
  labels:
    name: jivs-platform
    environment: production
